[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dndmodels"
version = "0.1.0"
description = "D&D 5e combat modeling library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
