[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dndmodels"
version = "0.1.0"
description = "D&D 5e combat modeling library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/dndmodels"]
