[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dndmodels"
version = "0.1.0"
description = "D&D 5e combat modeling library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
description = "Basic modeling for 5e"
requires-python = ">=3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/dndmodels"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-html>=3.2",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dndmodels --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100
